Finishing off: Modern IDB: Website data store management. https://bugs.webkit.org/show_bug.cgi?id=157626

Reviewed by Alex Christensen.

Source/WebCore:

Test: storage/indexeddb/modern/new-database-after-user-delete.html

This patch does two primary things:
1 - Implements the actual "delete files on disk" code for unopened databases,
    taken from existing WK2 code.

2 - When a UniqueIBDDatabase is told to close immediately for user delete, it also
    queues up a "delete backing store unconditionally" operation in the database task queue.

    That way, all of the open databases are deleted before the primary "delete all files"
    pass, and they are also deleted before any future openDB requests are handled that might
    recreate the files.

* Modules/indexeddb/server/IDBServer.cpp:
(WebCore::IDBServer::IDBServer::getOrCreateUniqueIDBDatabase):
(WebCore::IDBServer::IDBServer::deleteDatabase):
(WebCore::IDBServer::IDBServer::closeUniqueIDBDatabase):
(WebCore::IDBServer::IDBServer::openDBRequestCancelled):
(WebCore::IDBServer::removeAllDatabasesForOriginPath):
(WebCore::IDBServer::IDBServer::performCloseAndDeleteDatabasesModifiedSince):
(WebCore::IDBServer::IDBServer::performCloseAndDeleteDatabasesForOrigins):

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performUnconditionalDeleteBackingStore):
(WebCore::IDBServer::UniqueIDBDatabase::doneWithHardClose):
(WebCore::IDBServer::UniqueIDBDatabase::immediateCloseForUserDelete):
* Modules/indexeddb/server/UniqueIDBDatabase.h:

Source/WebKit2:

* DatabaseProcess/DatabaseProcess.cpp:
(WebKit::DatabaseProcess::deleteWebsiteDataForOrigins):
(WebKit::removeAllDatabasesForOriginPath): Deleted.
(WebKit::DatabaseProcess::deleteIndexedDatabaseEntriesForOrigins): Deleted.
(WebKit::DatabaseProcess::deleteIndexedDatabaseEntriesModifiedSince): Deleted.
* DatabaseProcess/DatabaseProcess.h:

LayoutTests:

* storage/indexeddb/modern/new-database-after-user-delete-expected.txt: Added.
* storage/indexeddb/modern/new-database-after-user-delete.html: Added.
* storage/indexeddb/modern/resources/new-database-after-user-delete.js: Added.

Canonical link: https://commits.webkit.org/176044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201195 268f45cc-cd09-0410-ab3c-d52691b4dbfc